--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-intersection-observer": "^9.5.3",
     "three": "^0.158.0",
     "@react-three/fiber": "^8.15.11",
-    "@react-three/drei": "^9.88.13"
+    "@react-three/drei": "^9.88.13",
+    "@emailjs/browser": "^4.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
